@@ -12,6 +12,10 @@ not yet  BJH  Release 10.63.00
               Perl programs: make them shell programs that reinvoke themselves
               as perl so we can get the Perl interpreter from the PATH.
 
+              pamtilt: fix bug: incorrect output or invalid memory access
+              crash.  Always broken (program was new in Neptbm 10.30
+              (October 2005)).
+
               pnmpsnr: fix bug: says types aren't the same when they are.
               Introduced in 10.61 (December 2012).
               
